2011-05-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure of txinfo21.test on FreeBSD
	* tests/txinfo21.test: Use the `is_newest' subroutine instead of
	the `ls -t' hack to to determine whether a file has been updated.
	This is required because at least FreeBSD `ls' do not sort files
	with the same timestamp in alphabetical order when using the `-t'
	option.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: allow requirements for compilers (mostly dummy)
	Most of the new requirements that are now accepted in `$required'
	as consequence of this patch are still dummy.  They are planned
	to be implemented only in master (or in some derived branch), but
	having them here (even just as no-op) will allow for an easier
	integration/backporting of potential new testcases.
	* tests/defs.in (cc, c++, fortran, fortran77): New requirements,
	still dummy.
	(flex): New requirement, picking LEX for configure.
	(lex): New requirement, alias for `flex'.  A more appropriate
	implementation, looking for a generic `lex' program, will follow
	in the future.
	(yacc): New requirement, alias for `bison'.  A more appropriate
	implementation, looking for a generic `yacc' program, will follow
	in the future.

2011-04-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure in a test on TESTS (VPATH-related)
	* tests/check-tests-in-builddir.test: When not using the
	parallel-tests option, do not check that VPATH components are
	not present in the displayed test name, since the simple-tests
	driver do not try to strip them.

2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test: self check subroutines for skipping/failing of tests
	* tests/self-check-report.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-04-23  Jim Meyering  <meyering@redhat.com>
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: new subroutines for test skipping/failing