@@ -1,3 +1,12 @@
+2011-05-15  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	testsuite: be more cross-compile friendly
+	* tests/defs.in (cross_compiling): New subroutine.
+	(am__tool_prefix): New internal variable.
+	(gcc, g++, gcj): Force the use of the correct "tool prefix"
+	when cross compiling.
+	(gfortran, g77, non-cross): New requirements.
+
 2011-05-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix spurious failure of txinfo21.test on FreeBSD
